test/types/records/bugs/methodOnValue.good
methodOnValue.chpl:12: error: Method defined on non-type 'myR'
